html and css footer

--- a/html.html
+++ b/html.html
@@ -276,8 +276,8 @@
     <!-- foooter -->
     <footer>
         <div class="container">
-            <div class="row pt_90 ">
-                <div class="col_6 col_12_xl">
+            <div class="row pt_90 justify_content_center_md">
+                <div class="col_4 col_6_md">
                     <div class="d_flex align_items_center">
                         <img class="width_30_xsm" src="./assets/img/png/logoimg.png" alt="logo"> <a href="#"
                             class="logo_text logo_font"><span>Events</span><samp
@@ -292,10 +292,10 @@
                     <img class="pl_15 pt_40" src="./assets/img/png/footer_fb.png" alt="image">
                     <img class="pl_15 pt_40" src="./assets/img/png/footer_tw.png" alt="image">
                 </div>
-                <div class="col_6 col_12_xl">
+                <div class="col_8 ">
                     <div class="row ">
-                        <div class="col_4 col_6_lg  d_flex justify_content_between flex_column_xsm">
-                            <div class="d_flex flex_column">
+                        <div class="col_4 col_6_md">
+                            <div class="d_flex justify_content_end justify_content_center_md">
                                 <ul>
                                     <li><a href="#" class="footer_p1">SERVICES</a></li>
                                     <li><a href="#" class="footer_p2">About</a></li>
@@ -304,7 +304,9 @@
                                     <li><a href="#" class="footer_p2">Contact</a></li>
                                 </ul>
                             </div>
-                            <div class="d_flex flex_column">
+                        </div>
+                        <div class="col_4 col_6_lg">
+                            <div class="d_flex justify_content_end justify_content_center_md">
                                 <ul>
                                     <li><a href="#" class="footer_p1">EVENTS</a></li>
                                     <li><a href="#" class="footer_p2">ullamcorper</a></li>
@@ -314,19 +316,29 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col_8">
-                            <div class="">
-                                <a href="#" class="footer_p1">GALLERY</a>
-                                <div class="d_flex">
-                                    <img src="./assets/img/png/footer_img1.png" alt="image">
-                                    <img class="pl_18" src="./assets/img/png/footer_img2.png" alt="image">
-                                    <img class="pl_18" src="./assets/img/png/footer_img3.png" alt="image">
+
+                        <div class="col_4 col_6_lg width_100_lg">
+                            <a href="#" class="footer_p1">GALLERY</a>
+                            <div class="row">
+                                <div class="col_4">
+                                    <img class="width_100" src="./assets/img/png/footer_img1.png" alt="image">
                                 </div>
-                                <div class="d_flex pt_13">
-                                    <img src="./assets/img/png/footer_img4.png" alt="image">
-                                    <img class="pl_18" src="./assets/img/png/footer_img5.png" alt="image">
-                                    <img class="pl_18" src="./assets/img/png/footer_img6.png" alt="image">
+                                <div class="col_4">
+                                    <img class="width_100" src="./assets/img/png/footer_img2.png" alt="image">
                                 </div>
+                                <div class="col_4">
+                                    <img class="width_100" src="./assets/img/png/footer_img3.png" alt="image">
+                                </div>
+                                <div class="col_4">
+                                    <img class="width_100" src="./assets/img/png/footer_img4.png" alt="image">
+                                </div>
+                                <div class="col_4">
+                                    <img class="width_100" src="./assets/img/png/footer_img5.png" alt="image">
+                                </div>
+                                <div class="col_4">
+                                    <img class="width_100" src="./assets/img/png/footer_img6.png" alt="image">
+                                </div>
+
                             </div>
                         </div>
                     </div>
